# data_viz

./: .gitignore  README.md  app.py  models_list.txt  pyproject.toml  requirements.txt  write_models.py
.streamlit/: secrets.toml.example
docs/: 01_architecture.md  02_pipeline.md  03_models.md  04_services.md  05_llm_design.md  06_validation.md  07_visualization_engine.md  08_limitations_and_future_work.md
examples/: housing.csv  movies.csv  sales.csv
src/: __init__.py  app.py  config.py  controller.py  logging_setup.py
src/models/: __init__.py  viz_spec.py
src/services/: __init__.py  claude_service.py  cleaning_service.py  dataset_service.py  execution_service.py  export_service.py  llm_router.py  llm_service.py  profiling_service.py  viz_service.py
src/utils/: json_tools.py  type_tools.py
tests/: __init__.py  conftest.py  test_dataset_service.py  test_models.py  test_profiling_service.py  test_viz_service.py
